<resources>
    <string name="app_name">Minima</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Minima</string>
    <string name="nav_header_subtitle">minima.global</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Minima</string>
    <string name="menu_maxima">Maxima</string>
    <string name="menu_gallery">MDS</string>

    <string name="menu_archive">Backup / Restore</string>
    <string name="menu_terminal">Terminal</string>

    <string name="menu_help">Help</string>

    <string name="menu_slideshow">Slideshow</string>

    <string name="minima_help">
Welcome to Minima\n
\n
The complete blockchain solution\n
\n
You now have access to a decentralised value and information transfer network unlike anything you have seen before\n
\n
An open application ecosystem known as the MDS - MiniDAPP System - allows you to interface easily with this new paradigm\n
\n
Value, Information and Application - everything you need to do anything you want\n
\n
We are still working hard to fit all the pieces together but we hope you enjoy this taste of Freedom\n
\n
The Minima Team</string>

    <string name="minima_backup">
        Making a backup of your Minima node is VERY important.\n
        \n
        On Minima you are the only one who looks after your coins.\n
        \n
        Currently - backups are only valid for 1-2 months.\n
        \n
        The files are about 1MB.. so not very big.
    </string>

    <string name="minima_restore">
        You can easily restore from a backup.\n
        \n
        Once you have restored Minima will shutdown.\n
        \n
        When finished - please re-open Minima and your data will have been restored.
    </string>

    <string name="minima_archive">
        You can also resync from an Archive Node - but this should be as a LAST resort\n
        \n
        You can reset your chain to the latest tip or you can reset your NEW device to an old wallet\n
        \n
        When finished - please re-open Minima and your data will have been restored.
    </string>

    <string name="minima_archive_explain">
        Do NOT copy / paste your seed phrase here!\n
        \n
        The clipboard is insecure\n
        \n
        Either leave blank for a simple tip resync - if you are on the wrong chain - OR type each word individually and let the suggestions help you to reset your whole wallet..
    </string>

    <string name="minima_vaultlock">
        Encrypt your private keys with a password.\n
        \n
        You will not be able to send any coins or sign anything.
    </string>

    <string name="minima_vaultunlock">
        Decrypt your private keys with your password.\n
        \n
        You will be able to send coins and sign again.
    </string>

    <string name="minima_archive_chainsync">
        You can re-sync JUST the Minima blockchain.\n
        \n
        This will leave your wallet and keys untouched.\n
        \n
        You can do this if you find yourself on the wrong chain.
    </string>

    <string name="minima_archive_chainsync_text">
        Here you can choose the Archive node host:port you will be connecting to.\n
        \n
        The default is \'auto\' - where we pick one for you.\n
        \n
        Once you have started please wait for the process to finish - then Minima will shutdown.\n
        \n
        Restart Minima and the changes will have taken effect.\n
        \n
        Your wallet and private keys will remain unchanged.
    </string>

    <string name="minima_archive_seedsync">
        As a last resort you can re-sync your entire wallet.\n
        \n
        If you lose your phone, and do not have a backup you can use JUST your seed phrase to do a complete Wallet re-sync.\n
        \n
        Your wallet and keys will be reset to the chosen seed phrase and all blocks re-downloaded.
    </string>

    <string name="params_dialog_text">
        Here you can set extra startup params for Minima.\n
        \n
        Do NOT touch this unless you are sure you know what you are doing.\n
        \n
        -archive : Run an archive node on your phone\n
        -mdspassword : Specify your mds password\n
        -rpcenable : enable RPC (use with SSL)\n
        -connect : Disable P2P and only connect to specified hosts\n
        ..\n
        \n
        You will need to restart Minima for changes to take effect.
    </string>

    <string name="minima_gdrive_backup_explanation_not_signed_in">Activate daily GDrive backups </string>
    <string name="minima_gdrive_backup_button_not_signed_in">Sign in to Google</string>

    <string name="minima_gdrive_backup_explanation_signed_in">GDrive User has activated daily backups\n\nThis happens automatically\n\nEmail:%s</string>
    <string name="minima_gdrive_backup_button_signed_in">Make GDrive backup Now</string>

    <string name="welcome_to_minima">Welcome to Minima</string>
    <string name="get_started">Start Minima</string>
    <string name="begin_setup">Begin Setup</string>
    <string name="onboarding_slide_description_one">The world operates on the exchange of value and information. Minima allows you to do this securely, with anyone on the network, without intermediaries.</string>
    <string name="onboarding_slide_description_two">Every member runs a complete node. All nodes are equal. We all cooperate to validate and secure the blockchain.</string>
    <string name="onboarding_slide_description_three">MiniDapps are decentralized web apps that run locally via your node. They are the gateway to a censorship-resistant web.</string>
    <string name="onboarding_slide_description_four">Your node is unique to you, only YOU hold your data and funds.\n\nYou are independent and sovereign.</string>
    <string name="onboarding_slide_description_five"> Freedom is not free. You must be responsible. Make a backup regularly and keep your seed phrase safe.</string>
    <string name="onboarding_slide_description_six">The first time you use Minima you will be asked for a peer on the network, someone you can connect to.\n\nThat means you need to know someone on the network - and they can share their list with you.</string>
    <string name="onboarding_slide_description_seven">You can do this.\n\nEmbrace it - and never look back.</string>

</resources>