<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/top_menu" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_minima"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_maxima"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_maxima" />
        <item
            android:id="@+id/nav_mds"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
    </group>

    <group android:id="@+id/middle_menu" android:checkableBehavior="single">

        <item
            android:id="@+id/nav_archive"
            android:icon="@android:drawable/ic_popup_disk_full"
            android:title="@string/menu_archive" />

        <item
            android:id="@+id/nav_help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/menu_help" />

    </group>

</menu>