<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.minima.android.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_mds"
        android:name="com.minima.android.ui.mds.MDSFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_mds" />

    <fragment
        android:id="@+id/nav_maxima"
        android:name="com.minima.android.ui.maxima.MaximaFragment"
        android:label="@string/menu_maxima"
        tools:layout="@layout/fragment_maxima" />

    <fragment
        android:id="@+id/nav_backup"
        android:name="com.minima.android.ui.backup.BackupFragment"
        android:label="Backup / Restore"
        tools:layout="@layout/fragment_backup" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.minima.android.ui.help.HelpFragment"
        android:label="Help"
        tools:layout="@layout/fragment_help" />

</navigation>